--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ license = "MIT"
 homepage = "https://github.com/mkasfeldt/KBgetter"
 documentation = "https://kbgetter.readthedocs.io/en/latest/"
 
+readme = "README.rst"
+
 [tool.poetry.dependencies]
 python = "^3.7"
 requests = "^2.26.0"
