--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "KBGetter"
-version = "0.1.1"
+version = "0.1.2"
 description = "Download FreshService articles to a local machine"
 authors = ["Matt Kasfeldt <matt.kasfeldt@gmail.com>"]
 license = "MIT"
@@ -9,6 +9,16 @@ homepage = "https://github.com/mkasfeldt/KBgetter"
 documentation = "https://kbgetter.readthedocs.io/en/latest/"
 
 readme = "README.rst"
+
+classifieres = [
+	"Development Status :: 3 - Alpha",
+	"Intended Audience :: Developers",
+	"Intended Audience :: Other Audience",
+	"License :: OSI Approved :: MIT License",
+	"Topic :: Documentation",
+	"Topic :: Utilities",
+	"Topic :: Text Processing :: Markup :: HTML",
+]
 
 [tool.poetry.dependencies]
 python = "^3.7"
